--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -13,9 +13,11 @@ layout: default
             <div id="markdown-content-container">{{ content }}</div>
             <p class="text-center">
               <br />
-              <a target="_blank" href="{{site.git_edit_address}}/{{ page.path }}" class="btn btn-default githubEditButton" role="button">
+              <!-- <a target="_blank" href="{{site.git_edit_address}}/{{ page.path }}" class="btn btn-default githubEditButton" role="button">
                 <i class="fa fa-pencil fa-lg"></i> Improve this page
-              </a>
+              </a> -->
+
+              <!-- 댓글 넣어야 함 -->
             </p>
             <hr>
             {% include section_nav.html %}
