--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
 
         <p class="text-center">
             {{ site.title }} {{ site.time | date: '%Y' }} |
-            Powered by <a href="https://github.com/hyesungoh/hyesungoh.github.io">Jekyll Doc Theme Custom</a>
+            Powered by <a href="https://github.com/hyesungoh/hyesungoh.github.io">Github</a>
         </p>
         <!-- <p class="text-muted">Place sticky footer content here.</p> -->
     </div>
