--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -9,7 +9,7 @@ layout: default
         </div>
 
         <div class="col-md-8">
-            <h1>{{ page.title }}</h1>
+            <h2>{{ page.title }}</h2> <hr/>
             <div id="markdown-content-container">{{ content }}</div>
             <p class="text-center">
               <br />
