--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -19,9 +19,48 @@ layout: default
 
               <!-- 댓글 넣어야 함 -->
             </p>
-            <hr>
-            {% include section_nav.html %}
-        </div>
 
+            <hr/>
+
+            <!--  댓글 시작 -->
+            {% if page.comments %}
+            <div id="disqus_thread"></div>
+            <script>
+
+            /**
+            *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+            *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+            /*
+            var disqus_config = function () {
+            this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+            this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+            };
+            */
+            (function() { // DON'T EDIT BELOW THIS LINE
+            var d = document, s = d.createElement('script');
+            s.src = 'https://hyesungoh-github-io.disqus.com/embed.js';
+            s.setAttribute('data-timestamp', +new Date());
+            (d.head || d.body).appendChild(s);
+            })();
+            </script>
+            <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+            {% endif %}
+            <!--  댓글 끝 -->
+            <hr>
+
+            <h4>Recent docs </h4>
+            <ul class="list-group">
+                {% for post in site.docs limit:10 %}
+                <li class="list-group-item">
+                <a href="{{ post.url | prepend: site.baseurl }}" {% if page.title==post.title %} class="list-group-item active" {% endif %}>
+                {{ post.title }}</a>
+                </li>
+                {% endfor %}
+            </ul>
+            <hr/>
+            {% include section_nav.html %}
+
+
+        </div>
     </div>
 </div>
